changed users route to members because we are saving authenticated API users to the same database. This separates the library members from library API users.
