# routes/users.js
@@ -1,60 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const User = require('../models/user');
-const { validateUser } = require('../middleware/validate');
-const { ensureAuth } = require('../middleware/auth');
-
-// CREATE
-router.post('/', validateUser, async (req, res, next) => {
-  try {
-    const user = await User.create(req.body);
-    res.status(201).json(user);
-  } catch (err) {
-    next(err);
-  }
-});
-
-// READ ALL
-router.get('/', async (req, res, next) => {
-  try {
-    const users = await User.find();
-    res.json(users);
-  } catch (err) {
-    next(err);
-  }
-});
-
-// READ ONE
-router.get('/:id', async (req, res, next) => {
-  try {
-    const user = await User.findById(req.params.id);
-    if (!user) return res.status(404).json({ message: 'User not found' });
-    res.json(user);
-  } catch (err) {
-    next(err);
-  }
-});
-
-// UPDATE User
-router.put('/:id', ensureAuth, validateUser, async (req, res, next) => {
-  try {
-    const user = await User.findByIdAndUpdate(req.params.id, req.body, { new: true, runValidators: true });
-    if (!user) return res.status(404).json({ message: 'User not found' });
-    res.json(user);
-  } catch (err) {
-    next(err);
-  }
-});
-
-// DELETE User
-router.delete('/:id', ensureAuth, async (req, res, next) => {
-  try {
-    const user = await User.findByIdAndDelete(req.params.id);
-    if (!user) return res.status(404).json({ message: 'User not found' });
-    res.json({ message: 'User deleted' });
-  } catch (err) {
-    next(err);
-  }
-});
-
-module.exports = router;
